# id-card-extractor

./: Cargo.toml  build.rs
.github/workflows/: check.yaml
src/: config.rs  main.rs
src/service/: identity.rs  mod.rs
